--- a/index.html
+++ b/index.html
@@ -28,7 +28,24 @@
                         <div>Deluxe</div>
                         <div class="text-description">Насладитесь всеми преимуществами</div>
                     </div>
-                    <div class="deluxe-price">цена</div>
+                    <div class="deluxe-price">
+                        <div class="price">1 месяц - 330 лей</div>
+                        <div class="price">3 месяца - 870 лей</div>
+                        <div class="price">12 месяцев - 2190 лей</div>
+                    </div>
+                    <div class="container-simple-text">
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог классики</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Пробные версии игр</div>
+                    </div>
                 </div>
 
 
@@ -40,9 +57,24 @@
                 <div class="bloc-subscribtion">
                     <div class="extra-text">
                         <div>Extra</div>
-                        <div class="text-description">Откройте  для себя сотни игр</div>
+                        <div class="text-description">Откройте для себя сотни игр</div>
                     </div>
-                    <div class="extra-price">цена</div>
+                    <div class="extra-price">
+                        <div class="price">1 месяц - 310 лей</div>
+                        <div class="price">3 месяца - 770 лей</div>
+                        <div class="price">12 месяцев - 1890 лей</div>
+                    </div>
+                    <div class="container-simple-text">
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
+                    </div>
                 </div>
 
 
@@ -54,9 +86,108 @@
                         <div>Essential</div>
                         <div class="text-description">Покупайте игры по лучшим ценам</div>
                     </div>
-                    <div class="essential-price">цена</div>
+                    <div class="essential-price">
+                        <div class="price">1 месяц - 220 лей</div>
+                        <div class="price">3 месяца - 440 лей</div>
+                        <div class="price">12 месяцев - 1190 лей</div>
+                    </div>
+                    <div class="container-simple-text">
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                    </div>
                 </div>
             </div>
+
+
+
+            <div><img src="img/krastos-img.png" class="img-right" alt=""></div>
+            <div class="svg-text"><img src="img/turkish.svg" alt=""></div>
+            <div class="container-bloc-subscribtion">
+                <div class="bloc-subscribtion">
+                    <div class="deluxe-text">
+                        <div>Deluxe</div>
+                        <div class="text-description">Насладитесь всеми преимуществами</div>
+                    </div>
+                    <div class="deluxe-price">
+                        <div class="price">1 месяц - 310 лей</div>
+                        <div class="price">3 месяца - 860 лей</div>
+                        <div class="price">12 месяцев - 1750 лей</div>
+                    </div>
+                    <div class="container-simple-text">
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог классики</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Пробные версии игр</div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+                <div class="bloc-subscribtion">
+                    <div class="extra-text">
+                        <div>Extra</div>
+                        <div class="text-description">Откройте для себя сотни игр</div>
+                    </div>
+                    <div class="extra-price">
+                        <div class="price">1 месяц - 290 лей</div>
+                        <div class="price">3 месяца - 760 лей</div>
+                        <div class="price">12 месяцев - 1600 лей</div>
+                    </div>
+                    <div class="container-simple-text">
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="bloc-subscribtion">
+                    <div class="essential-text">
+                        <div>Essential</div>
+                        <div class="text-description">Покупайте игры по лучшим ценам</div>
+                    </div>
+                    <div class="essential-price">
+                        <div class="price">1 месяц - 210 лей</div>
+                        <div class="price">3 месяца - 450 лей</div>
+                        <div class="price">12 месяцев - 1050 лей</div>
+                    </div>
+                    <div class="container-simple-text">
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
