--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p class="text">Купим игры, зарегистрируем аккаунт. </p>
                 <p class="text">В регионе Украина и Турция.</p>
             </div>
-            <div><img src="img/horizon.png" class="img-left" alt=""></div>
+            <div><img src="img/horizon2.png" class="img-left" alt=""></div>
             <div class="svg-text"><img src="img/turkish.svg" alt=""></div>
             <div class="container-bloc-subscribtion">
                 <div class="bloc-subscribtion">
@@ -35,7 +35,7 @@
                     </div>
                     <div class="container-simple-text">
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="container-simple-text">
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="container-simple-text">
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
@@ -106,7 +106,7 @@
 
 
             <div><img src="img/krastos-img.png" class="img-right" alt=""></div>
-            <div class="svg-text"><img src="img/turkish.svg" alt=""></div>
+            <div class="svg-text"><img src="img/ukraina.svg" alt=""></div>
             <div class="container-bloc-subscribtion">
                 <div class="bloc-subscribtion">
                     <div class="deluxe-text">
@@ -120,7 +120,7 @@
                     </div>
                     <div class="container-simple-text">
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
@@ -151,7 +151,7 @@
                     </div>
                     <div class="container-simple-text">
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="container-simple-text">
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая многопользовательская игра</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
