--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ps Plus Moldova</title>
+    <link rel="icon" href="img/horizon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     </link>
 </head>
@@ -37,10 +38,12 @@
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы
+                        </div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation
+                            Plus*</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог классики</div>
@@ -68,10 +71,12 @@
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы
+                        </div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation
+                            Plus*</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
                     </div>
@@ -95,10 +100,12 @@
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы
+                        </div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation
+                            Plus*</div>
                     </div>
                 </div>
             </div>
@@ -122,10 +129,12 @@
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы
+                        </div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation
+                            Plus*</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог классики</div>
@@ -153,10 +162,12 @@
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы
+                        </div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation
+                            Plus*</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Каталог игр</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Классика Ubisoft +</div>
                     </div>
@@ -180,16 +191,73 @@
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Игры месяца</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Сетевая игра</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные скидки</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Экслюзивные материалы
+                        </div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Облачное хранилище</div>
                         <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Share Play</div>
-                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation Plus*</div>
+                        <div class="text"> &#10003;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Коллекция PlayStation
+                            Plus*</div>
                     </div>
                 </div>
             </div>
 
         </div>
     </div>
+    <div class="container-logo-icons">
+        <div class="logo"><img src="img/joystick.png" class="logo-image" alt="">PsPlusMoldova</div>
+        <div class="social-icons">
+            <div class="icon">
+                <a href="viber://chat?number=%2B37360887261" target="_blank">
+                    <img src="img/viber.png" alt="Viber">
+                </a>
+            </div>
+            <div class="icon">
+                
+                <a href="tg://resolve?domain=DmitryPSN" target="_blank">
+                    <img src="img/telegram.png" alt="Telegram">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://wa.me/37360887261" target="_blank">
+                    <img src="img/whatsapp.png" alt="WhatsApp">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://www.facebook.com/dkaraban1" target="_blank">
+                    <img src="img/facebook.png" alt="facebook">
+                </a>
+            </div>
+        </div>
+    </div>
+    <section id="section4">
+        <h1>Свяжитесь с нами</h1>
+        <p>Содержание раздела 4</p>
+        <h2>Contact Us</h2>
+        <form id="contact-form">
+            <label for="name">Ваше Имя:</label>
+            <input type="text" id="name" name="name" required><br><br>
+            <!-- <label for="email">Ваш Email:</label>
+        <input type="email" id="email" name="email" required><br><br> -->
+            <label for="phone">Ваш номер:</label>
+            <input type="tel" id="phone" name="phone" required><br><br>
+            <label for="message">Сообшение:</label>
+            <textarea id="message" name="message" required></textarea><br><br>
+            <button type="submit">Отпраить</button>
+        </form>
+
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+        </script>
+        <script type="text/javascript">
+            (function () {
+                emailjs.init({
+                    // publicKey: "kFiaDjS0BMcDLhJxu", 
+                    publicKey: "vLQtMEiHbAunz9i35",
+
+                });
+            })();
+        </script>
+        <script src="script.js"></script>
+    </section>
 </body>
 
 </html>
