--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PS Plus Moldova предоставляет последние новости, обзоры игр, и эксклюзивные предложения для всех поклонников PlayStation. Присоединяйтесь к нам и будьте в курсе всех новинок!">
+    <meta name="keywords" content="PS Plus Moldova, PlayStation, игры, новости, обзоры, эксклюзивы, консольные игры">
+    <meta name="author" content="PS Plus Moldova">
     <title>Ps Plus Moldova</title>
     <link rel="icon" href="img/horizon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
