--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="PS Plus Moldova предоставляет последние новости, обзоры игр, и эксклюзивные предложения для всех поклонников PlayStation. Присоединяйтесь к нам и будьте в курсе всех новинок!">
+    <meta name="description"
+        content="PS Plus Moldova предоставляет последние новости, обзоры игр, и эксклюзивные предложения для всех поклонников PlayStation. Присоединяйтесь к нам и будьте в курсе всех новинок!">
     <meta name="keywords" content="PS Plus Moldova, PlayStation, игры, новости, обзоры, эксклюзивы, консольные игры">
     <meta name="author" content="PS Plus Moldova">
     <title>Ps Plus Moldova</title>
@@ -205,20 +206,37 @@
 
         </div>
     </div>
-    
-    <div class="contact">
-        <h1>Свяжитесь с нами</h1>
-        <form id="contact-form">
-            <label for="name">Ваше Имя:</label>
-            <input type="text" id="name" name="name" required><br><br>
-            <!-- <label for="email">Ваш Email:</label>
+
+    <div class="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item">
+                <img src="img/facebook.png" alt="Image 1">
+            </div>
+            <div class="carousel-item active">
+                <img src="img/telegram.png" alt="Image 2">
+            </div>
+            <div class="carousel-item">
+                <img src="img/whatsapp.png" alt="Image 3">
+            </div>
+        </div>
+        <a class="carousel-control prev" href="#">&#10094;</a>
+        <a class="carousel-control next" href="#">&#10095;</a>
+    </div>
+    <div class="container-contact-us">
+        <div class="contact">
+            <h1>Для быстрого оформленя заказа, свяжитесь с нами!</h1>
+            <form id="contact-form">
+                <label for="name">Ваше Имя:</label>
+                <input type="text" id="name" name="name" required><br><br>
+                <!-- <label for="email">Ваш Email:</label>
         <input type="email" id="email" name="email" required><br><br> -->
-            <label for="phone">Ваш номер:</label>
-            <input type="tel" id="phone" name="phone" value="+373 " required><br><br>
-            <label for="message">Сообшение:</label>
-            <textarea id="message" name="message" required></textarea><br><br>
-            <button type="submit">Отправить</button>
-        </form>
+                <label for="phone">Ваш номер:</label>
+                <input type="tel" id="phone" name="phone" value="+373 " required><br><br>
+                <label for="message">Сообшение:</label>
+                <textarea id="message" name="message" required></textarea><br><br>
+                <button type="submit">Отправить</button>
+            </form>
+        </div>
         <div class="container-logo-icons">
             <div class="social-icons">
                 <div class="icon">
@@ -227,7 +245,7 @@
                     </a>
                 </div>
                 <div class="icon">
-                    
+
                     <a href="tg://resolve?domain=DmitryPSN" target="_blank">
                         <img src="img/telegram.png" alt="Telegram">
                     </a>
@@ -247,19 +265,18 @@
     </div>
 
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init({
+                // publicKey: "kFiaDjS0BMcDLhJxu", 
+                publicKey: "vLQtMEiHbAunz9i35",
 
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-        </script>
-        <script type="text/javascript">
-            (function () {
-                emailjs.init({
-                    // publicKey: "kFiaDjS0BMcDLhJxu", 
-                    publicKey: "vLQtMEiHbAunz9i35",
-
-                });
-            })();
-        </script>
-        <script src="script.js"></script>
+            });
+        })();
+    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
