--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="PS Plus Moldova предоставляет последние новости, обзоры игр, и эксклюзивные предложения для всех поклонников PlayStation. Присоединяйтесь к нам и будьте в курсе всех новинок!">
-    <meta name="keywords" content="PS Plus Moldova, PlayStation, игры, новости, обзоры, эксклюзивы, консольные игры">
-    <meta name="author" content="PS Plus Moldova">
     <title>Ps Plus Moldova</title>
     <link rel="icon" href="img/horizon1.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
@@ -212,23 +208,23 @@
         </div>
     </div>
     <div class="text-game-first">Горячие скидки!</div>
-    <div class="gallery-container-first">
+    <!-- <div class="gallery-container-first">
         <div class="text-game">
             Ознакомтесь с найлушеми скидками на игры.
-           <br> Каждые две недели вас ждут новые игры по самым выгодным ценам.
-           <br>
+            <br> Каждые две недели вас ждут новые игры по самым выгодным ценам.
+            <br>
         </div>
-    <div class="gallery-container">
-        <div class="gallery">
-            <img src="img/image1.jpg" alt="Фото 1" class="active">
-            <img src="img/image2.jpg" alt="Фото 2">
-            <img src="img/image3.jpg" alt="Фото 3">
-            <img src="img/image4.jpg" alt="Фото 4">
+        <div class="gallery-container">
+            <div class="gallery">
+                <img src="img/image1.jpg" alt="Фото 1" class="active">
+                <img src="img/image2.jpg" alt="Фото 2">
+                <img src="img/image3.jpg" alt="Фото 3">
+                <img src="img/image4.jpg" alt="Фото 4">
+            </div>
+            <button id="butoon" class="prev" onclick="prevSlide()">&#10094;</button>
+            <button id="butoon" class="next" onclick="nextSlide()">&#10095;</button>
         </div>
-        <button id="butoon" class="prev" onclick="prevSlide()">&#10094;</button>
-        <button id="butoon" class="next" onclick="nextSlide()">&#10095;</button>
-    </div>
-    </div>
+    </div> -->
 
 
     <div class="text-comand">Для быстрого оформления заказа, заполните форму
@@ -271,13 +267,14 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
     <div class="botom-text-1">Работаем круглосуточно без выходных.</div>
 
-        <div class="botom-text-2">Оставлять заявку и писать на Viber, WhatsApp, Facebook или Telegram
-        можно в любое время. Проконсультируем по всем вопросам.</div>
-    
+    <div class="botom-text-2">Оставлять заявку и писать на Viber, WhatsApp, Facebook или Telegram
+        можно в любое время. Проконсультируем по всем вопросам.
+    </div>
+
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
